# simple-wasi-pipe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: devskim.yml  rust-clippy.yml  snyk-infrastructure.yml
examples/modules/ls/: Cargo.toml  ls.wasm  sample.output.txt  sample.sh
examples/modules/ls/src/: main.rs
examples/modules/string-filter/: Cargo.toml  build.sh  sample.sh  string-filter.wasm
examples/modules/string-filter/src/: main.rs
examples/modules/wc/: Cargo.toml  sample.sh  wc.wasm
examples/modules/wc/src/: main.rs
examples/stdin-wasi-stdout/: Cargo.toml  build.sh  ls.wasm  sample.conf.jsonl  sample.output.txt  sample.sh  string-filter.wasm  wc.wasm
examples/stdin-wasi-stdout/src/: main.rs
src/: lib.rs  module.rs  process.rs
src/wasi/: wasmtime.rs
src/wasi/wasmtime/: ctx_builder.rs  wasi_process.rs
