[package]
name = "simple-wasi-pipe"
version = "0.1.0"
edition = "2021"
keywords = ["wasi", "wasm", "pipe"]
description = "wasi unix pipeline"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = "0.38.1"
wasmtime-wasi = "0.38.1"
wasi-common = "0.38.1"
serde_json = "1.0.82"
serde = {version="1.0.138", features=["derive"]}
