[package]
name = "simple-wasi-pipe"
version = "0.2.0"
edition = "2021"
keywords = ["wasi", "wasm", "pipe"]
description = "wasi unix pipeline"
license = "MIT"

[dependencies]
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"
wasi-common = "5.0.0"
serde_json = "1.0.91"
serde = {version="1.0.152", features=["derive"]}
