[package]
name = "simple-wasi-pipe"
version = "0.3.0"
edition = "2021"
keywords = ["wasi", "wasm", "pipe"]
description = "wasi unix pipeline"
license = "MIT"

[dependencies]
wasmtime = "14.0.2"
wasmtime-wasi = "14.0.2"
wasi-common = "14.0.2"
serde_json = "1.0.107"
serde = {version="1.0.190", features=["derive"]}
